final 100/100 documented and splited into functios